--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <spring-boot-starter-test>2.3.3.RELEASE</spring-boot-starter-test>
         <spring-data-jpa>2.3.3.RELEASE</spring-data-jpa>
         <mysql-connector-java>8.0.20</mysql-connector-java>
+        <spring-boot-starter-data-mongodb>2.3.3.RELEASE</spring-boot-starter-data-mongodb>
+        <maven-compiler-plugin>3.8.1</maven-compiler-plugin>
     </properties>
 
     <dependencies>
@@ -51,6 +53,16 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector-java}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>${spring-boot-starter-data-mongodb}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin}</version>
         </dependency>
     </dependencies>
 
