--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring-boot-starter-web>2.3.3.RELEASE</spring-boot-starter-web>
         <spring-boot-starter-test>2.3.3.RELEASE</spring-boot-starter-test>
         <mysql-connector-java>8.0.20</mysql-connector-java>
+        <spring-boot-starter-data-mongodb>2.5.1</spring-boot-starter-data-mongodb>
     </properties>
 
     <dependencies>
@@ -41,6 +42,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector-java}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>${spring-boot-starter-data-mongodb}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
