--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <spring-boot-starter-test>2.3.3.RELEASE</spring-boot-starter-test>
         <mysql-connector-java>8.0.20</mysql-connector-java>
         <spring-boot-starter-data-mongodb>2.5.1</spring-boot-starter-data-mongodb>
+        <springboot-test-version>2.2.6.RELEASE</springboot-test-version>
+        <springboot-test-autoconfigure-version>2.2.6.RELEASE</springboot-test-autoconfigure-version>
+        <spring-test-version>5.2.5.RELEASE</spring-test-version>
     </properties>
 
     <dependencies>
@@ -52,6 +55,29 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <version>${springboot-test-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test-autoconfigure</artifactId>
+            <version>${springboot-test-autoconfigure-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-test-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
