--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=notesDb-MongoDB
+spring.data.mongodb.database=Notes
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 logging.level.org.springframework.data.mongodb.repository.query=DEBUG
