Favorites section  added to notes and the implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=Notes
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb+srv://FrancoTMartinez:monasterio848@clustergotthatnote.9af9j.mongodb.net/GotThatNote-Notesdb?retryWrites=true&w=majority
 logging.level.org.springframework.data.mongodb.repository.query=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
