--- a/heroku.yml
+++ b/heroku.yml
@@ -1,4 +1,4 @@
 build:
-	docker:
-	web: src/main/resources/sqlDB/docker-compose.yaml
+  docker: null
+  web: src/main/resources/sqlDB/docker-compose.yaml
 	
