application.properties modified

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://FrancoTMartinez:monasterio848@clustergotthatnote.9af9j.mongodb.net/GotThatNote-Notesdb?retryWrites=true&w=majority
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
 logging.level.org.springframework.data.mongodb.repository.query=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
