mongoDB conection fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.data.mongodb.uri=mongodb+srv://FrancoTMartinez:monasterio848@clustergotthatnote.9af9j.mongodb.net/GotThatNote-Notesdb?retryWrites=true&w=majority
 springdoc.swagger-ui.path=/swagger-ui.html
 
 logging.level.org.springframework.data.mongodb.repository.query=DEBUG
